--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "devDependencies": {
     "chai": "^4.1.0",
     "eslint-config-hmh-mtl": "^1.3.0"
+  },
+  "dependencies": {
+    "@hmh/hab-epub-splitter": "^0.6.5",
+    "@hmh/habitat-epub-export": "^0.3.2"
   }
 }
