--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-hmh-mtl": "^1.4.1"
   },
   "dependencies": {
+    "@hmh/epub-archiver": "^1.0.7",
     "@hmh/hab-epub-splitter": "^1.0.5",
     "@hmh/habitat-epub-export": "^0.3.2"
   }
